# dev_main

./: .gitignore  Bug Report  ONBOARDING_REFACTOR_GUIDE.md  README.md  alarm_api_integration_guide.md  alarm_db명세서 - db_추가 요청서.csv  alarm_integration_guide.md  compose.yml  frontend_api_integration_standard_guide.md  frontend_integration_guide.md  login.md  onboarding.csv  package-lock.json  알림 api 명세서 - 알림.csv
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_report.yml  버그-제보.md
.github/workflows/: main.yml
.mariadb/initdb.d/: ddl.sql
app/: compose.yml
app/backend/: main.py  pyproject.toml
app/backend/src/apis/: alarm.py  auth.py  invite.py  user.py  user2.py  utils.py  verification.py
app/backend/src/models/: auth.py  invite.py  model.py  user.py  user2.py
app/backend/src/utils/: db.py  fastset.py  file.py  htmltem.py  kafkasv.py  ocr.py  rediscl.py  settings.py  tokenset.py  websc.py
app/frontend/: default.conf  index.html  package-lock.json  package.json  vite.config.js
app/frontend/public/: 404.html
app/frontend/src/: main.jsx
app/frontend/src/components/: Alarm.jsx  HeaderNav.jsx  LoginBackground.jsx  SidebarNav.jsx  SignupInputField.jsx
app/frontend/src/homes/: App.jsx  Home.jsx
app/gateway/: README.md  pom.xml
backend/: main.py
frontend/: package.json  vite.config.js
frontend/src/: main.jsx
frontend/src/pages/: Home.jsx
main/: compose.yml
main/.mariadb/initdb.d/: ddl.sql
main/nginx/conf.d/: default.conf
monitoring/: compose.yml  prometheus.yml
nginx/conf.d/: default.conf
nginx/html/: 504.html  index.html
(+53 files in other folders)
