[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "mariadb>=1.1.14",
    "pathlib>=1.0.1",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "uuid>=1.30",
]
